updated mail credentials

--- a/.env
+++ b/.env
@@ -2,8 +2,10 @@ PORT = 3000
 MONGO_URI = "mongodb+srv://rinshid_26:edu_rinshid26@cluster0.apv2h1u.mongodb.net/?retryWrites=true&w=majority"
 # MONGO_URI = "mongodb://127.0.0.1:27017/edu-venture"
 JWT_SECRET = 'wellsomethingshouldbesecretsoiwritethiswishmeluck'
-EMAIL='eduventure26@gmail.com'
-EMAILPASSWORD='eihlxzzizioettux'
+#EMAIL='eduventure26@gmail.com'
+#EMAILPASSWORD='eihlxzzizioettux'
+EMAIL_PASS="qubkptxzlleqxujj"
+EMAIL_USER="solmatepvt@gmail.com"
 CLOUDINARY_CLOUD_NAME = 'djqbq1vgb'
 CLOUDINARY_CLOUD_KEY = '826759486159537'
 CLOUDINARY_API_SECRET = 'R0ckrZMiGQZASDa3U4RAI_FXqqU'
